tabled design updated

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <div id="banner">
       <img src="./images/slider.png" alt="slider">
     </div>
-    <div class="products-section-wrapper">
-      <div class="product-filter-wrapper">
+    <div class="products-section-wrapper clearfix">
+      <div class="product-filter-wrapper clearfix">
         <div class="container">
           <div class="filter-nav-wrapper clearfix">
             <div class="filter-nav">
@@ -112,7 +112,7 @@
             </div>
 
           </div>
-          <div class="mobile-filter-section-wrapper ">
+          <div class="mobile-filter-section-wrapper clearfix ">
             <div class="mobile-menu-filter clearfix">
               <div class="filter-burger" id="filter-burger-icon" onclick="showFilterMenu()">
                 <img src="./images/burger-menu.png" alt="burger-menu-filter">
@@ -332,7 +332,7 @@
     </div>
 
     <section id="features-section">
-      <div class="features-wrapper">
+      <div class="features-wrapper clearfix">
         <div class="feature-rate-info">
           <div class="rate-highlighter">
             <div class="brand-title">WOOD STAND</div>
@@ -402,7 +402,7 @@
                 <img src="./images/money.png" alt="fast-deliver">
               </div>
               <h5 class="service-title">MONEY RETURNS</h5>
-              <p class="serveice-details">100% Money back guarntee</p>
+              <p class="serveice-details">Fully secured SSL checkout technology</p>
 
             </div>
           </li>
@@ -422,7 +422,7 @@
             </div>
             <div class="company-details">
               <p>Watson Website Builder is a big library of pre-designed web elements which help you create website in few minutes.</p>
-              <p><a href="#">Read More</a></p>
+            <p class="read-more"> <a href="#">Read More</a></p> 
             </div>
           </div>
         </div>
