--- a/index.html
+++ b/index.html
@@ -18,57 +18,36 @@
 
 <body>
   <header>
-    <div class="container">
-      <div class="top-header-section clearfix">
-        <div class="logo-wrapper">
-          <div class="top-header-left clearfix">
-            <div class="search-section">
-                <form action="#">
-                  <button type="submit"><img src="./images/search.png" alt=""></button>
-                  <input type="text" placeholder="SEARCH">
-                </form>
+    <div class="container-fluid">
+       <div class="container">
+        <div class="top-header-section clearfix">
+          <div class="logo-wrapper">
+            <div class="top-header-left clearfix">
+              <div class="search-section">
+                  <form action="#">
+                    <button type="submit"><img src="./images/search.png" alt=""></button>
+                    <input type="text" placeholder="SEARCH">
+                  </form>
+              </div>
+              <div class="logo"><a href="#"><img src="./images/logo.png" alt="shopX"></a>  </div>
             </div>
-            <div class="logo"><a href="#"><img src="./images/logo.png" alt="shopX"></a>  </div>
+
           </div>
 
-        </div>
-
-        <div class="top-header-nav-wrapper">
-          <ul>
-            <li><a href="#"> <img src="./images/user.png" alt="user"> </a></li>
-            <li><a href="#"> <img src="./images/cart.png" alt="cart"> </a></li>
-            <li id="toggle"><a href="#" onclick="showMenu()"> <img src="./images/burger-menu.png" alt="menu"> </a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="sidebar-wrapper" id="show-sidebar" onclick="showMenu()">
-
-      </div>
-      <div class="sidebar" id='sidebar'>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li class="active"><a href="#">Shop</a></li>
-          <li><a href="#">Element</a></li>
-          <li><a href="#">Pages</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Blogs</a></li>
-        </ul>
-      </div>
-
-      <div class="search-wrapper">
-        <form action="#" method="post">
-          <img src="./images/search.png" alt="search-icon">
-          <div class="input-search">
-            <input type="text" placeholder="search your products here">
+          <div class="top-header-nav-wrapper">
+            <ul>
+              <li><a href="#"> <img src="./images/user.png" alt="user"> </a></li>
+              <li><a href="#"> <img src="./images/cart.png" alt="cart"> </a></li>
+              <li id="toggle"><a href="#" onclick="showMenu()"> <img src="./images/burger-menu.png" alt="menu"> </a></li>
+            </ul>
           </div>
-        </form>
+        </div>
+        </div>
+        </div>
+        <div class="sidebar-wrapper" id="show-sidebar" onclick="showMenu()">
 
-
-
-      </div>
-      <div class="bottom-header-section">
-
-        <div class="main-nav-wrapper">
+        </div>
+        <div class="sidebar" id='sidebar'>
           <ul>
             <li><a href="#">Home</a></li>
             <li class="active"><a href="#">Shop</a></li>
@@ -79,8 +58,34 @@
           </ul>
         </div>
 
-      </div>
-    </div>
+        <div class="search-wrapper">
+          <form action="#" method="post">
+            <img src="./images/search.png" alt="search-icon">
+            <div class="input-search">
+              <input type="text" placeholder="search your products here">
+            </div>
+          </form>
+
+
+
+        </div>
+        <div class="bottom-header-section">
+
+          <div class="main-nav-wrapper">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li class="active"><a href="#">Shop</a></li>
+              <li><a href="#">Element</a></li>
+              <li><a href="#">Pages</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Blogs</a></li>
+            </ul>
+          </div>
+
+        </div>
+
+
+
   </header>
 
   <div id="page-section">
@@ -155,14 +160,14 @@
                         </ul>
                       </div>
                       <div class="product-image">
-                        <img src="https://stat.homeshop18.com/homeshop18/images/productImages/808/aapno-rajasthan-3-pc-ceramic-decorative-vase-medium_f78fedef145e153cf32e42cc58e5ead7.jpg" alt="product-image">
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
                       </div>
                       <div class="product-status">
                         <img src="./images/new.png" alt="new">
                       </div>
                     </div>
                     <div class="card-product-details">
-                      <div class="product-name">Lava Vtase</div>
+                      <div class="product-name">Lava Vase</div>
                       <div class="product-rates">
                         <span class="original-product-rate">$55.00</span>
                         <span class="discount-product-rate">$35.00</span>
@@ -231,10 +236,6 @@
                     </div>
                   </div>
                 </li>
-              </ul>
-            </div>
-            <div class="product-list">
-              <ul>
                 <li>
                   <div class="product-card">
                     <div class="card-main clearfix">
@@ -323,9 +324,6 @@
                 </li>
               </ul>
             </div>
-
-
-
           </div>
         </div>
       </div>
@@ -402,7 +400,7 @@
                 <img src="./images/money.png" alt="fast-deliver">
               </div>
               <h5 class="service-title">MONEY RETURNS</h5>
-              <p class="serveice-details">Fully secured SSL checkout technology</p>
+              <p class="serveice-details">100% Money back guarntee</p>
 
             </div>
           </li>
@@ -422,7 +420,7 @@
             </div>
             <div class="company-details">
               <p>Watson Website Builder is a big library of pre-designed web elements which help you create website in few minutes.</p>
-            <p class="read-more"> <a href="#">Read More</a></p> 
+            <p class="read-more"> <a href="#">Read More</a></p>
             </div>
           </div>
         </div>
