desktop view added

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
             <li><a href="#">Blogs</a></li>
           </ul>
         </div>
-
-        <div class="search-wrapper">
-          <form action="#" method="post">
-            <img src="./images/search.png" alt="search-icon">
-            <div class="input-search">
-              <input type="text" placeholder="search your products here">
-            </div>
-          </form>
-
+        <div class="container">  <div class="search-wrapper">
+            <form action="#" method="post">
+              <img src="./images/search.png" alt="search-icon">
+              <div class="input-search">
+                <input type="text" placeholder="search your products here">
+              </div>
+            </form>
 
 
-        </div>
+
+          </div></div>
+
         <div class="bottom-header-section">
 
           <div class="main-nav-wrapper">
@@ -161,10 +161,11 @@
                       </div>
                       <div class="product-image">
                         <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
+                        <div class="product-status">
+                        <p>NEW</p>
+                        </div>
                       </div>
-                      <div class="product-status">
-                        <img src="./images/new.png" alt="new">
-                      </div>
+
                     </div>
                     <div class="card-product-details">
                       <div class="product-name">Lava Vase</div>
@@ -190,10 +191,11 @@
                       </div>
                       <div class="product-image">
                         <img src="https://image.freepik.com/free-photo/ceramic-vase-from-greece-isolated-white_102618-84.jpg" alt="product-image">
+                        <div class="product-status">
+                        <p>HOT</p>
+                        </div>
                       </div>
-                      <div class="product-status">
-                        <img src="./images/hot.png" alt="hot">
-                      </div>
+
                     </div>
                     <div class="card-product-details">
                       <div class="product-name">Ceramic Pot</div>
@@ -219,10 +221,11 @@
                       </div>
                       <div class="product-image">
                         <img src="https://cdn.pixabay.com/photo/2015/11/19/10/38/food-1050813_960_720.jpg" alt="product-image">
+                        <div class="product-status">
+
+                        </div>
                       </div>
-                      <div class="product-status">
-                        <img src="./images/new.png" alt="new">
-                      </div>
+
                     </div>
                     <div class="card-product-details">
                       <div class="product-name">Dinnerware Service</div>
@@ -248,6 +251,9 @@
                       </div>
                       <div class="product-image">
                         <img src="https://cdn.pixabay.com/photo/2016/11/23/13/46/honey-1852934_960_720.jpg" alt="product-image">
+                        <div class="product-status">
+                              <p>NEW</p>
+                        </div>
                       </div>
 
                     </div>
@@ -275,11 +281,12 @@
                       </div>
                       <div class="product-image">
                         <img src="https://cdn.pixabay.com/photo/2016/07/09/14/13/boat-1506334_960_720.jpg" alt="product-image">
-                      </div>
-                      <div class="product-status">
-                        <img src="./images/hot.png" alt="hot">
+                        <div class="product-status">
+                        <p>NEW</p>
 
+                        </div>
                       </div>
+
                     </div>
                     <div class="card-product-details">
                       <div class="product-name">Floating Boat</div>
@@ -305,10 +312,11 @@
                       </div>
                       <div class="product-image">
                         <img src="https://cdn.pixabay.com/photo/2019/06/20/18/32/colored-pots-4287760_960_720.jpg" alt="product-image">
+                        <div class="product-status">
+                          <p>HOT</p>
+                        </div>
                       </div>
-                      <div class="product-status">
-                        <img src="./images/new.png" alt="new">
-                      </div>
+
                     </div>
                     <div class="card-product-details">
                       <div class="product-name">Ceramic Pot</div>
@@ -332,17 +340,13 @@
     <section id="features-section">
       <div class="features-wrapper clearfix">
         <div class="feature-rate-info">
+          <h3 class="brand-title">WOOD STAND</h3>
           <div class="rate-highlighter">
-            <div class="brand-title">WOOD STAND</div>
-            <img src="./images/feature-circle.png" alt="rate-highlighter">
-            <div class="rates">
-              <div class="original-rate"> <span>$</span>65.00</div>
-              <div class="discount-rate"> <span>$</span>35.00</div>
+                <p class="original-rate"> <span>$</span>65.00</p>
+                <p class="discount-rate"> <span>$</span>35.00</p>
             </div>
-
-
           </div>
-        </div>
+
         <div class="feature-product-info">
           <h1>Featured</h1>
           <div class="info-content">
