--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="/css/carousel.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
@@ -90,7 +91,19 @@
 
   <div id="page-section">
     <div id="banner">
-      <img src="./images/slider.png" alt="slider">
+      <div class="carousel-container">
+        <div class="carousel-image-wrapper">
+          <img src="./images/slider.webp" alt="Image" />
+          <img src="./images/slider1.webp" alt="Image" />
+          <img src="./images/slider3.webp" alt="Image" />
+        </div>
+        <div class="carousel-details">
+          <p class="carousel-title"><span>New</span> <span>Arrivals</span></p>
+          <p class="carousel-name"><span>Sky Planter</span> <span class="product-rate">$18.00</span></p>
+          <a href="#">Shop Now</a>
+        </div>
+      </div>
+
     </div>
     <div class="products-section-wrapper clearfix">
       <div class="product-filter-wrapper clearfix">
@@ -485,6 +498,13 @@
 
   <script src="./js/script.js"></script>
   <script src="https://kit.fontawesome.com/f86a146e27.js"></script>
+  <script src="./js/carousel.js"></script>
+  <script>
+    const newCarousel = new Carousel({
+    carouselWrapper : '.carousel-container',
+    imageWrapper : '.carousel-image-wrapper',
+  })
+  </script>
 </body>
 
 </html>
