--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400&display=swap" rel="stylesheet">
-  <link href="//db.onlinewebfonts.com/c/b18e9033532010bea11e37aa7543a869?family=Geogrotesque" rel="stylesheet" type="text/css" />
+
 
   <title>shopX</title>
 </head>
@@ -174,7 +174,7 @@
                       </div>
                       <div class="product-image">
                         <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
-                        <div class="product-status">
+                        <div class="product-status new">
                         <p>NEW</p>
                         </div>
                       </div>
@@ -203,8 +203,8 @@
                         </ul>
                       </div>
                       <div class="product-image">
-                        <img src="https://image.freepik.com/free-photo/ceramic-vase-from-greece-isolated-white_102618-84.jpg" alt="product-image">
-                        <div class="product-status">
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
+                        <div class="product-status hot">
                         <p>HOT</p>
                         </div>
                       </div>
@@ -233,8 +233,8 @@
                         </ul>
                       </div>
                       <div class="product-image">
-                        <img src="https://cdn.pixabay.com/photo/2015/11/19/10/38/food-1050813_960_720.jpg" alt="product-image">
-                        <div class="product-status">
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
+                        <div class="product-status hot">
 
                         </div>
                       </div>
@@ -263,8 +263,8 @@
                         </ul>
                       </div>
                       <div class="product-image">
-                        <img src="https://cdn.pixabay.com/photo/2016/11/23/13/46/honey-1852934_960_720.jpg" alt="product-image">
-                        <div class="product-status">
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
+                        <div class="product-status new">
                               <p>NEW</p>
                         </div>
                       </div>
@@ -293,8 +293,8 @@
                         </ul>
                       </div>
                       <div class="product-image">
-                        <img src="https://cdn.pixabay.com/photo/2016/07/09/14/13/boat-1506334_960_720.jpg" alt="product-image">
-                        <div class="product-status">
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
+                        <div class="product-status new">
                         <p>NEW</p>
 
                         </div>
@@ -324,8 +324,8 @@
                         </ul>
                       </div>
                       <div class="product-image">
-                        <img src="https://cdn.pixabay.com/photo/2019/06/20/18/32/colored-pots-4287760_960_720.jpg" alt="product-image">
-                        <div class="product-status">
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2019/5/9/1cfbbfa1-a0dd-4981-85e3-2659023922fa1557421534071-1.jpg" alt="product-image">
+                        <div class="product-status hot">
                           <p>HOT</p>
                         </div>
                       </div>
@@ -353,11 +353,13 @@
     <section id="features-section">
       <div class="features-wrapper clearfix">
         <div class="feature-rate-info">
-          <h3 class="brand-title">WOOD STAND</h3>
           <div class="rate-highlighter">
                 <p class="original-rate"> <span>$</span>65.00</p>
                 <p class="discount-rate"> <span>$</span>35.00</p>
             </div>
+          </div>
+          <div class="brand-wrapper">
+            <img src="./images/wood-stand.png" alt="brand" >
           </div>
 
         <div class="feature-product-info">
@@ -428,7 +430,7 @@
   </div>
 
   <footer>
-    <div class="container">
+    <div class="container clearfix">
       <div class="top-footer-wrapper">
         <div class="about-us col">
           <div class="top-footer-content">
@@ -485,12 +487,17 @@
 
         </div>
       </div>
-      <div class="bottom-footer clearfix">
-        <div class="payement-menthods">
-          <img src="./images/payment.png" alt="payment-card-options">
-        </div>
-        <div class="copyright">
-          © 2002-2018 themexpert Inc. All rights reserved.
+
+    </div>
+    <div class="container-fluid">
+      <div class="container">
+        <div class="bottom-footer clearfix">
+          <div class="payement-menthods">
+            <img src="./images/payment.png" alt="payment-card-options">
+          </div>
+          <div class="copyright">
+            © 2002-2018 themexpert Inc. All rights reserved.
+          </div>
         </div>
       </div>
     </div>
